--- a/.github/workflows/boiocchi-00.yml
+++ b/.github/workflows/boiocchi-00.yml
@@ -5,4 +5,5 @@ jobs:
   ciao:
     runs-on: ubuntu-latest
     steps:
-        - run: echo "sudo shutwodn"
+        - run: echo "Ciao sono una stringa"
+        - run: echo "Ciao sono un'altra stringa"
