--- a/.github/workflows/boiocchi-00.yml
+++ b/.github/workflows/boiocchi-00.yml
@@ -17,3 +17,7 @@ jobs:
             sparse-Checkout: |
                 boiocchi
         - run: ls -la
+        - uses: actions/setup-python@v5
+          with:
+            python-version: '3.12.7'
+        - run: python --version
